force-app/main/default/objects/Callback_Response__c/Callback_Response__c.object-meta.xml
<CustomObject>
    <label>Callback Response</label>
    <nameField>
        <displayFormat>CB-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callback Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>