force-app/main/default/objects/Callback_Response__c/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <label>Headers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>