force-app/main/default/objects/Callback_Response__c/fields/Uri__c.field-meta.xml
<CustomField>
    <fullName>Uri__c</fullName>
    <label>Uri</label>
    <type>Url</type>
</CustomField>